--- a/catalog.html
+++ b/catalog.html
@@ -15,13 +15,13 @@
 
 <body>
 
-    <header class="wrapper header-container pt25 position-absolute">
+    <header class="wrapper header-container header-container-ml header-container-l pt25 position-absolute">
         <div class="site-logo-container site-logo-order-sm">
             <img class="h-mob20-desk17 mr5" src=".\images\logo.svg" alt="логотип сайта">
             <p>Music&nbsp;box</p>
         </div>
         <nav class="site-navigation-order-sm">
-            <ul class="site-navigation-container">
+            <ul class="site-navigation-container site-navigation-container-l">
                 <li>
                     <a class="site-navigation-link" href="index.html">
                         Главная
@@ -44,7 +44,7 @@
                 </li>
             </ul>
         </nav>
-        <div class="search-form-container search-form-order-sm">
+        <div class="search-form-container search-form-container-ml search-form-order-sm">
             <input class="search-input-styles" placeholder="поиск..." type="search">
         </div>
     </header>
@@ -52,19 +52,19 @@
     <main>
         <div class="bg-layout-cover-norepeat-position-center bg-morten-harket">
             <div class="wrapper pt250 pb80">
-                <div class="musician-container display-flex f-direction-column txt-up">
+                <div class="musician-container txt-up">
                     <div>
                         <h1>Morten Harket</h1>
                         <p class="fsz-mob14-desk18 txt-low">24 875 поклонников</p>
                     </div>
-                    <div class="musian-buttons-container display-flex mt40">
+                    <div class="musian-buttons-container mt40">
                         <a href="#"
-                            class="button musian-button musian-button-mix display-flex f-align-center clr-btn-mix">
+                            class="button musian-button musian-button-mix">
                             <img class="ml15 h-mob20-desk16" src="images/play-button.svg" alt="play button sign">
                             <p class="ml15">Микс</p>
                         </a>
                         <a href="#"
-                            class="button musian-button musian-button-select display-flex f-align-center clr-btn-select txt-decor-none">
+                            class="button musian-button musian-button-select">
                             <img class="ml15 h-mob20-desk16" src="images/heart.svg" alt="select button sign"
                                 height="17">
                             <p class="ml15">В&nbsp;избранное</p>
@@ -75,16 +75,16 @@
         </div>
 
         <article class="wrapper mt100">
-            <h2 class="txt-up fw-bold">Популярные треки</h2>
+            <h2>Популярные треки</h2>
 
-            <div class="popular-tracks-cover display-flex justify-content-between">
+            <div class="popular-tracks-cover">
 
-                <ul class="popular-tracks-sec-container display-flex f-direction-column">
+                <ul class="popular-tracks-sec-container">
 
-                    <li class="fsz14 mb25 popular-tracks-sec display-flex justify-content-between f-align-center">
-                        <a href="#" class="display-flex f-content-start f-align-center">
-                            <div class="mr15 h-mob50-desk55">
-                                <img class="img-fit" src="images/Wild_Seed.png" alt="Wild seed album avatar">
+                    <li class="fsz14 mb25 popular-tracks-sec">
+                        <a href="#" class="popular-tracks-link-styles">
+                            <div>
+                                <img class="mr15 h-mob50-desk55" src="images/Wild_Seed.png" alt="Wild seed album avatar">
                             </div>
                             <p class="color-white">Spanish Steps<br>
                                 <span class="color-grey fsz12">Morten Harket</span>
@@ -94,10 +94,10 @@
                         </p>
                     </li>
 
-                    <li class="fsz14 mb25 popular-tracks-sec display-flex justify-content-between f-align-center">
-                        <a href="#" class="display-flex f-content-start f-align-center">
-                            <div class="mr15 h-mob50-desk55 ">
-                                <img class="img-fit" src="images/Brother.png" alt="Brother album avatar">
+                    <li class="fsz14 mb25 popular-tracks-sec">
+                        <a href="#" class="popular-tracks-link-styles">
+                            <div>
+                                <img class="mr15 h-mob50-desk55" src="images/Brother.png" alt="Brother album avatar">
                             </div>
                             <p class="color-white">Brother<br>
                                 <span class="color-grey fsz12">Morten Harket</span>
@@ -107,10 +107,10 @@
                         </p>
                     </li>
 
-                    <li class="fsz14 mb25 popular-tracks-sec display-flex justify-content-between f-align-center">
-                        <a href="#" class="display-flex f-content-start f-align-center">
-                            <div class="c-b-popular-tracks__sec--img">
-                                <img class="mr15 h-mob50-desk55 " src="images/Letter_from_Egypt.png"
+                    <li class="fsz14 mb25 popular-tracks-sec">
+                        <a href="#" class="popular-tracks-link-styles">
+                            <div>
+                                <img class="mr15 h-mob50-desk55" src="images/Letter_from_Egypt.png"
                                     alt="Letter from Egypt album avatar">
                             </div>
                             <p class="color-white">Darkspace<br>
@@ -123,12 +123,12 @@
 
                 </ul>
 
-                <ul class="popular-tracks-sec-container display-flex f-direction-column">
+                <ul class="popular-tracks-sec-container">
 
-                    <li class="fsz14 mb25 popular-tracks-sec display-flex justify-content-between f-align-center">
-                        <a href="#" class="display-flex f-content-start f-align-center">
-                            <div class="c-b-popular-tracks__sec--img">
-                                <img class="mr15 h-mob50-desk55 " src="images/Letter_from_Egypt.png"
+                    <li class="fsz14 mb25 popular-tracks-sec">
+                        <a href="#" class="popular-tracks-link-styles">
+                            <div>
+                                <img class="mr15 h-mob50-desk55" src="images/Letter_from_Egypt.png"
                                     alt="Letter from Egypt album avatar">
                             </div>
                             <p class="color-white">With You - With Me<br>
@@ -139,10 +139,10 @@
                         </p>
                     </li>
 
-                    <li class="fsz14 mb25 popular-tracks-sec display-flex justify-content-between f-align-center">
-                        <a href="#" class="display-flex f-content-start f-align-center">
-                            <div class="c-b-popular-tracks__sec--img">
-                                <img class="mr15 h-mob50-desk55 " src="images/Wild_Seed.png"
+                    <li class="fsz14 mb25 popular-tracks-sec">
+                        <a href="#" class="popular-tracks-link-styles">
+                            <div>
+                                <img class="mr15 h-mob50-desk55" src="images/Wild_Seed.png"
                                     alt="Wild seed album avatar">
                             </div>
                             <p class="color-white">Brodsky Tune<br>
@@ -153,9 +153,9 @@
                         </p>
                     </li>
 
-                    <li class="fsz14 mb25 popular-tracks-sec display-flex justify-content-between f-align-center">
-                        <a href="#" class="display-flex f-content-start f-align-center">
-                            <div class="c-b-popular-tracks__sec--img">
+                    <li class="fsz14 mb25 popular-tracks-sec">
+                        <a href="#" class="popular-tracks-link-styles">
+                            <div>
                                 <img class="mr15 h-mob50-desk55" src="images/Out_of_My_Hands.png"
                                     alt="Out of My Hands album avatar">
                             </div>
@@ -172,15 +172,15 @@
         </article>
 
         <article class="wrapper mt100">
-            <h2 class="txt-up fw-bold p-m-0">Дискография</h2>
+            <h2>Дискография</h2>
 
-            <ul class="diskography-container display-flex">
+            <ul class="diskography-container">
 
-                <li class="fsz-mob16-desk20 diskography-album-container display-flex f-direction-column">
+                <li class="fsz-mob16-desk20 diskography-album-container">
                     <a class="color-white" href="#">
-                        <div class="album-container display-flex album album-brother-album">
+                        <div class="album-container album-brother-album">
 
-                            <img class="button-albums" src="images/play-button.svg" alt="play button sign">
+                            <img class="play-sign" src="images/play-button.svg" alt="play button sign">
 
                         </div>
 
@@ -191,11 +191,11 @@
                     </a>
                 </li>
 
-                <li class="fsz-mob16-desk20 diskography-album-container display-flex f-direction-column">
+                <li class="fsz-mob16-desk20 diskography-album-container">
                     <a class="color-white" href="#">
-                        <div class="album-container display-flex album album-out-of-my-hands-album">
+                        <div class="album-container album-out-of-my-hands-album">
 
-                            <img class="button-albums" src="images/play-button.svg" alt="play button sign">
+                            <img class="play-sign" src="images/play-button.svg" alt="play button sign">
 
                         </div>
 
@@ -206,11 +206,11 @@
                     </a>
                 </li>
 
-                <li class="fsz-mob16-desk20 diskography-album-container display-flex f-direction-column">
+                <li class="fsz-mob16-desk20 diskography-album-container">
                     <a class="color-white" href="#">
-                        <div class="album-container display-flex album album-letter-from-egypt-album">
+                        <div class="album-container album-letter-from-egypt-album">
 
-                            <img class="button-albums" src="images/play-button.svg" alt="play button sign">
+                            <img class="play-sign" src="images/play-button.svg" alt="play button sign">
 
                         </div>
 
@@ -221,11 +221,11 @@
                     </a>
                 </li>
 
-                <li class="fsz-mob16-desk20 diskography-album-container display-flex f-direction-column">
+                <li class="fsz-mob16-desk20 diskography-album-container">
                     <a class="color-white" href="#">
-                        <div class="album-container display-flex album album-vogts-villa-album">
+                        <div class="album-container album-vogts-villa-album">
 
-                            <img class="button-albums" src="images/play-button.svg" alt="play button sign">
+                            <img class="play-sign" src="images/play-button.svg" alt="play button sign">
 
                         </div>
 
@@ -236,11 +236,11 @@
                     </a>
                 </li>
 
-                <li class="fsz-mob16-desk20 diskography-album-container display-flex f-direction-column">
+                <li class="fsz-mob16-desk20 diskography-album-container">
                     <a class="color-white" href="#">
-                        <div class="album-container display-flex album-wild-seed-album">
+                        <div class="album-container album-wild-seed-album">
 
-                            <img class="button-albums" src="images/play-button.svg" alt="play button sign">
+                            <img class="play-sign" src="images/play-button.svg" alt="play button sign">
 
                         </div>
 
@@ -251,10 +251,10 @@
                     </a>
                 </li>
 
-                <li class="fsz-mob16-desk20 diskography-album-container display-flex f-direction-column">
+                <li class="fsz-mob16-desk20 diskography-album-container">
                     <a class="color-white" href="#">
-                        <div class="album-container display-flex album album-poetenes-evangelium-album">
-                            <img class="button-albums" src="images/play-button.svg" alt="play button sign">
+                        <div class="album-container album-poetenes-evangelium-album">
+                            <img class="play-sign" src="images/play-button.svg" alt="play button sign">
                         </div>
 
                         <p>
@@ -269,17 +269,17 @@
 
 
         <section class="wrapper mt100">
-            <h2 class="txt-up fw-bold p-m-0">Похожие исполнители</h2>
+            <h2>Похожие исполнители</h2>
 
-            <ul class="b-similiar-artists-container display-flex justify-content-between txt-center">
+            <ul class="b-similiar-artists-container txt-center">
 
-                <li class="similiar-artists-styles display-flex f-direction-column pb50">
+                <li class="similiar-artists-styles pb50">
 
                     <a href="#" class="artists-avatar-styles">
                         <img class="img-fit" src="images/A-ha.png" alt="A-ha avatar">
                     </a>
 
-                    <a href="#" class="color-white ">
+                    <a href="#" class="color-white">
                         <p class="fsz-mob12-desk18">
                             <b>
                                 A-ha</b><br>
@@ -289,7 +289,7 @@
 
                 </li>
 
-                <li class="similiar-artists-styles display-flex f-direction-column pb50">
+                <li class="similiar-artists-styles pb50">
 
                     <a href="#" class="artists-avatar-styles">
                         <img class="img-fit" src="images/Tears_for_Fears.png" alt="tears for fears avatar">
@@ -305,7 +305,7 @@
 
                 </li>
 
-                <li class="similiar-artists-styles display-flex f-direction-column pb50">
+                <li class="similiar-artists-styles pb50">
 
                     <a href="#" class="artists-avatar-styles">
                         <img class="img-fit" src="images/Duran_Duran.png" alt="Duran Duran avatar">
@@ -321,7 +321,7 @@
 
                 </li>
 
-                <li class="similiar-artists-styles display-flex f-direction-column pb50">
+                <li class="similiar-artists-styles pb50">
 
                     <a href="#" class="artists-avatar-styles">
                         <img class="img-fit" src="images/Jack_Savoretti.png" alt="Jack Savoretti avatar">
@@ -337,7 +337,7 @@
 
                 </li>
 
-                <li class="similiar-artists-styles display-flex f-direction-column pb50">
+                <li class="similiar-artists-styles pb50">
 
                     <a href="#" class="artists-avatar-styles">
                         <img class="img-fit" src="images/Keane.png" alt="Keane avatar">
@@ -353,7 +353,7 @@
 
                 </li>
 
-                <li class="similiar-artists-styles display-flex f-direction-column pb50">
+                <li class="similiar-artists-styles pb50">
 
                     <a href="#" class="artists-avatar-styles">
                         <img class="img-fit" src="images/Frank_Sinatra.png" alt="Frank Sintra avatar">
@@ -369,7 +369,7 @@
 
                 </li>
 
-                <li class="similiar-artists-styles display-flex f-direction-column pb50">
+                <li class="similiar-artists-styles pb50">
 
                     <a href="#" class="artists-avatar-styles">
                         <img class="img-fit" src="images/Paul_Young.png" alt="Paul Young avatar">
@@ -385,7 +385,7 @@
 
                 </li>
 
-                <li class="similiar-artists-styles display-flex f-direction-column pb50">
+                <li class="similiar-artists-styles pb50">
 
                     <a href="#" class="artists-avatar-styles">
                         <img class="img-fit" src="images/Chris_Rea.png" alt="Cris rea avatar">
@@ -408,7 +408,7 @@
 
     <footer class="bg-gradient">
         <div class="wrapper mt100 pt80">
-            <div class="footer-container">
+            <div class="footer-container footer-container-m footer-container-ml footer-container-l">
                 <ul class="footer-blocks-styles">
                     <li>
                         <a class="footer-link-styles" href="#">
@@ -520,7 +520,7 @@
         <div class="footer-white-line-styles"></div>
 
         <div class="wrapper mt50 pb50">
-            <ul class="footer-navigation-container display-flex justify-content-between">
+            <ul class="footer-navigation-container footer-navigation-container-m">
                 <li>
                     <a href="#" class="footer-link-styles">
                         Магазин
