--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
 <body>
 
-    <header class="wrapper header-container pt25 position-absolute">
+    <header class="wrapper header-container header-container-ml header-container-l pt25 position-absolute">
         <div class="site-logo-container site-logo-order-sm">
             <img class="h-mob20-desk17 mr5" src=".\images\logo.svg" alt="логотип сайта">
             <p>Music&nbsp;box</p>
         </div>
         <nav class="site-navigation-order-sm">
-            <ul class="site-navigation-container">
+            <ul class="site-navigation-container site-navigation-container-l">
                 <li>
                     <a class="site-navigation-link" href="index.html">
                         Главная
@@ -44,7 +44,7 @@
                 </li>
             </ul>
         </nav>
-        <div class="search-form-container search-form-order-sm">
+        <div class="search-form-container search-form-container-ml search-form-order-sm">
             <input class="search-input-styles" placeholder="поиск..." type="search">
         </div>
     </header>
@@ -53,7 +53,7 @@
 
         <div class="bg-layout-cover-norepeat-position-center bg-main-page">
 
-            <div class="wrapper main-page-access-container pt250 pb250 ">
+            <div class="wrapper main-page-access-container main-page-access-container-m main-page-access-container-ml main-page-access-container-l pt250 pb250 ">
 
                 <h1>
                     Онлайн музыка где угодно
@@ -67,7 +67,7 @@
                 </p>
 
 
-                <form class="main-page-access-form-container m-auto" method="get">
+                <form class="main-page-access-form-container main-page-access-form-container-m m-auto" method="get">
                     <input class="main-page-access-inputs" type="text" id="fname" name="fname" placeholder="Имя">
                     <input class="main-page-access-inputs" type="text" id="email" name="email" placeholder="Email">
                     <button class="button access-form-button txt-up">
@@ -84,12 +84,12 @@
                 Формы подписки
             </h2>
 
-            <div class="subscribe-cards-container">
+            <div class="subscribe-cards-container subscribe-cards-container-m">
 
-                <div class="card-container mb50 bg-free">
+                <div class="card-container card-container-l w-mob280-desk350 mb50 bg-free">
                     <p class="fsz-mob16-desk24">Бесплатная</p>
                     <div
-                        class="subsribe-description-holster">
+                        class="subsribe-description-holster subsribe-description-holster-l">
                         <p class="fsz60 p-m-0">0
                             <sup class="fsz30">руб.</sup>
                         </p>
@@ -102,9 +102,9 @@
                     </div>
                 </div>
 
-                <div class="card-container mb50 bg-standart">
+                <div class="card-container card-container-l w-mob280-desk350 mb50 bg-standart">
                     <p class="fsz-mob16-desk24">Стандартная</p>
-                    <div class="subsribe-description-holster">
+                    <div class="subsribe-description-holster subsribe-description-holster-l">
                         <p class="fsz60 p-m-0">250
                             <sup class="fsz30">руб.</sup>
                         </p>
@@ -116,9 +116,9 @@
                     </div>
                 </div>
 
-                <div class="card-container mb50 bg-premium">
+                <div class="card-container card-container-l w-mob280-desk350 mb50 bg-premium">
                     <p class="fsz-mob16-desk24">Премиум</p>
-                    <div class="subsribe-description-holster">
+                    <div class="subsribe-description-holster subsribe-description-holster-l">
                         <p class="fsz60 p-m-0">500
                             <sup class="fsz30">руб.</sup>
                         </p>
@@ -145,20 +145,20 @@
                 Последние новости
             </h2>
 
-            <article class="news-aricle-container">
+            <article class="news-aricle-container news-aricle-container-m">
 
                 <div>
                     <img class="img-fit" src="images/Music_to_Be_Murdered_By.png" alt="Eminem album cover photo">
                 </div>
 
-                <div class="news-txt-container">
+                <div class="news-txt-container news-txt-container-m news-txt-container-ml">
                     <h3>Music to Be Murdered By</h3>
                     <p class="fsz14 text-color-secondary lh200">
                         Новый альбом Eminem «Music&nbsp;to&nbsp;Be Murdered&nbsp;By»
                         уже доступен в нашем сервисе.
                         На альбоме вас ждёт 20 новых треков.
                     </p>
-                    <div class="releas-data-container">
+                    <div class="releas-data-container releas-data-container-m">
                         <div>
                             <img class="h-mob25-desk19" src="images\avatar.png" height="19" alt="avatar image">
                         </div>
@@ -176,16 +176,16 @@
                 </div>
             </article>
 
-            <article class="news-aricle-container news-second-order-sm">
+            <article class="news-aricle-container news-aricle-container-m news-second-order-sm">
 
-                <div class="news-txt-container">
+                <div class="news-txt-container news-txt-container-m news-txt-container-ml">
                     <h3>Ordinary&nbsp;Man</h3>
                     <p class="fsz14 text-color-secondary lh200">
                         Легенда рока Оззи Озборн спустя 10 лет выпустил
                         новый альбом Ordinary Man.
                         Слушайте в числе первых на Music Box
                     </p>
-                    <div class="releas-data-container">
+                    <div class="releas-data-container releas-data-container-m">
                         <div>
                             <img class="h-mob25-desk19" src="images\avatar.png" alt="avatar image">
                         </div>
@@ -211,8 +211,8 @@
             <h2 class="txt-up txt-center mb50">
                 Мобильное приложение
             </h2>
-            <div class="mobile-application-container">
-                <div class="mobile-application-text-container">
+            <div class="mobile-application-container mobile-application-container-m">
+                <div class="mobile-application-text-container mobile-application-text-container-xm mobile-application-text-container-m mobile-application-text-container-l">
                     <p>Воспользуйтесь нашим мобильным приложением.
                         Оно позволит слушать музыку с любого устройства
                         на базе операционных систем Androind и iOS
@@ -235,7 +235,7 @@
 
     <footer class="bg-gradient">
         <div class="wrapper mt100 pt80">
-            <div class="footer-container">
+            <div class="footer-container footer-container-m footer-container-ml footer-container-l">
                 <ul class="footer-blocks-styles">
                     <li>
                         <a class="footer-link-styles" href="#">
@@ -318,28 +318,28 @@
                     <li class="footer-link-styles">
                         Подписывайтесь
                     </li>
-                    <div class="social-container">
+                    <ul class="social-container">
                         <li>
                             <a href="#">
-                                <img src="images\Google+.png" height="16">
+                                <img src="images\Google+.png" height="16" alt="Google plus icon">
                             </a>
                         </li>
                         <li>
                             <a>
-                                <img src="images\Twitter.png" height="16">
+                                <img src="images\Twitter.png" height="16" alt="Twitter icon">
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="images\Facebook.png" height="16">
+                                <img src="images\Facebook.png" height="16" alt="Facebook icon">
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="images\Instagram.png" height="16">
+                                <img src="images\Instagram.png" height="16" alt="Instagram icon">
                             </a>
                         </li>
-                    </div>
+                    </ul>
                 </ul>
             </div>
         </div>
@@ -347,7 +347,7 @@
         <div class="footer-white-line-styles"></div>
 
         <div class="wrapper mt50 pb50">
-            <ul class="footer-navigation-container display-flex justify-content-between">
+            <ul class="footer-navigation-container footer-navigation-container-m">
                 <li>
                     <a href="#" class="footer-link-styles">
                         Магазин
